<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_main"
        android:title="@string/film_nav_title"
        android:icon="@drawable/ic_list_light"/>
    <item
        android:id="@+id/nav_favorite"
        android:title="@string/favorites_nav_title"
        android:icon="@drawable/ic_favorite_light"/>
</menu>