...
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary">

            <TextView
                android:id="@+id/film_name"
                style="@style/Theme.MovieSearchApplication.Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="40sp"
                app:layout_constraintEnd_toEndOf="parent"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/film_name" />

            <TextView
                android:id="@+id/descr"
                style="@style/Theme.MovieSearchApplication.Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
...
