...
        android:textColor="?attr/colorOnSecondary"
        app:layout_constraintStart_toEndOf="@id/poster"
        app:layout_constraintTop_toBottomOf="@id/name"
        tools:text="@tools:sample/full_names" />

    <ImageView
        android:id="@+id/like"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_margin="20dp"
        android:src="@drawable/ic_favorite_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
...
